fix(TableRoot): correct overflow property for better table scrolling experience

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -28,3 +28,16 @@ progress = blue-700
 done = lime-700
 */
 
+::-webkit-scrollbar {
+  width: 2px;
+  height: 2px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--color-gray-400);
+  border-radius: 9999px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
